--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -1,7 +1,9 @@
-server { 
-  listen  80 ipv6only=off default_server;
-  listen  443 ipv6only=off default_server;
-  server_name demo_ico.io www.demoico.io;
+server {  
+  listen  443  ;
+  listen 80;
+  listen [::]:80;
+
+  server_name demoico.io www.demoico.io;
   
   location / {
     root   /usr/share/nginx/html;
@@ -12,4 +14,22 @@ server {
   location = /50x.html {
     root   /usr/share/nginx/html;
   }
+}
+
+ 
+
+server {
+        listen  443  ;
+        listen 80;
+        listen [::]:80;
+        server_name api.demoico.io;
+
+        location / {
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header Host $host;
+                proxy_set_header X-NginX-Proxy true;
+                proxy_pass http://localhost:8000/;
+                proxy_redirect http://localhost:8000/ https://$server_name/;
+        }
 }
