--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -17,19 +17,14 @@ server {
 }
 
  
-
 server {
-        listen  443  ;
         listen 80;
-        listen [::]:80;
+        listen 443 ssl;
         server_name api.demoico.io;
 
-        location / {
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                proxy_set_header Host $host;
-                proxy_set_header X-NginX-Proxy true;
-                proxy_pass http://localhost:8000/;
-                proxy_redirect http://localhost:8000/ https://$server_name/;
+        location /{
+          proxy_pass "http://api:8000";
         }
+
 }
+ 
