--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - '80:80'
+
+networks:
+    default:
+        external:
+            name: nginx-proxy
